--- a/Magnus.html
+++ b/Magnus.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/index-598264fc.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="index-598264fc.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-black">
