--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <link rel="stylesheet" href="/Virtual-Git/RandomAttempt/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-    <script defer src="/Virtual-Git/RandomAttempt/TypeWriting.js"></script>
+    <script defer src="TypeWriting.js"></script>
 
     <title>Magnus A.I.</title>
-  <link rel="stylesheet" href="/Virtual-Git/RandomAttempt/index-598264fc.css">
+  <link rel="stylesheet" href="index-598264fc.css">
 </head>
 
 <body class="bg-black select-none">
@@ -208,7 +208,7 @@
 
     <!-- Initialize Swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/Type.js"></script>
+    <script src="Type.js"></script>
 
 </body>
 
