--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <p class="IntoMated FadeAnimation2 px-8">By</p>
         <p class="IntoMated FadeAnimation2 px-20 mt-9">Syed shah inayath ullah quadri (21061-CS-020)</p>
-        <!-- <p class="IntoMated FadeAnimation2 px-20 mt-9">Syed uzair Mohiuddin (21061-CS-17)</p> -->
+         <p class="IntoMated FadeAnimation2 px-20 mt-9">Syed uzair Mohiuddin (21061-CS-17)</p>
         <p class="IntoMated FadeAnimation2 px-20 mt-9">Methar Sai Pratap (21061-CS-021)</p>
-        <!-- <p class="IntoMated FadeAnimation2 px-20 mt-9">Mohammed afridi (21061-CS-012)</p> -->
-        <!-- <p class="IntoMated FadeAnimation2 px-20 mt-9">K. Naveen (21061-CS-012)</p> -->
+        <p class="IntoMated FadeAnimation2 px-20 mt-9">Mohammed afridi (21061-CS-012)</p>
+         <p class="IntoMated FadeAnimation2 px-20 mt-9">K. Naveen (21061-CS-015)</p> 
 
     </header>
 
